Register horizontal scroll fixed

--- a/styles/pages/_login_register.scss
+++ b/styles/pages/_login_register.scss
@@ -17,6 +17,10 @@
         margin-top: 0;
     }
 
+    &__body {
+        overflow-x: hidden;
+    }
+
     &__container {
         width: 100%;
         display: flex;
